# KatzPlotkinPy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml  setup.py
katzplotkinpy/: __init__.py  afgen.py  utils.py
katzplotkinpy/src/: afgen.py  utils.py
katzplotkinpy/test/: test_katzplotkin.py
katzplotkinpy/test/unit_tests/: test_utils.py
src/: katzplotkinpy.ipynb  main.rs  scratch.ipynb
src/katzplotkinpy/: __init__.py  __main__.py  afgen.py  cli.py  dub2dc.py  sor2dc.py  sor2dl.py  vor2d.py  vor2dc.py  vor2dl.py
tests/: BUILD.md  CMakeLists.txt  test_cli.py
tests/f77/: AFGEN.f  DUB2DC.f  DUB3DC.f  LINALG.f  PANEL.f  PHICD.f  PHICSD.f  PHILD.f  PHIQD.f  SOR2DC.f  SOR2DL.f  UVLM.f  VOR2D.f  VOR2DC.f  VOR2DL.f  VORING.f  WAKE.f  afgen.f  afgen.f77  afgenvis.py
