[tool.poetry]

name = "KatzPlotkinPy"
version = "0.1.0"
description = "This is a project implements the FORTRAN computer programs listed in Low Speed Aerodynamics (2nd Ed) into a Python package and stand alone program(s). Additional features such as visualisation have been included."
license = "MIT"
authors = ["alwinw <16846521+alwinw@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/alwinw/KatzPlotkinPy"
repository = "https://github.com/alwinw/KatzPlotkinPy"
documentation = "https://github.com/alwinw/KatzPlotkinPy"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]
# test
pytest = "^6.2.3"
pytest-cov = "^2.12.1"
codecov = "^2.1.12"
# format
black = "^22.3.0"
isort = "^5.10.1"
# lint
commitizen = "^2.24.0"
flake8 = "^4.0.1"
mypy = "^0.910"
pre-commit = "^2.18.1"
# docs

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']

[tool.isort]
line_length = 88
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra -q",
  "-v",
  "--showlocals",
  "--strict-markers",
  "--strict-config",
] # --cov-report xml --cov=tuify
testpaths = ["tests"]

[tool.flake8]
max-line-length = 88
max-doc-length = 88
max-complexity = 10
doctests = true
exclude = ['.git', '__pycache__', '.venv']
