[tool.poetry]

name = "KatzPlotkinPy"
version = "0.1.0"
description = "This is a project implements the FORTRAN computer programs listed in Low Speed Aerodynamics (2nd Ed) into a Python package and stand alone program(s). Additional features such as visualisation have been included."
license = "MIT"
authors = ["alwinw <16846521+alwinw@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/alwinw/KatzPlotkinPy"
repository = "https://github.com/alwinw/KatzPlotkinPy"
documentation = "https://github.com/alwinw/KatzPlotkinPy"

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.4"

[tool.poetry.group.dev.dependencies]
# test
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
# format
black = "^23.7.0"
isort = "^5.12.0"
# lint
commitizen = "^3.6.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
pycln = "^2.2.2"
pyproject-flake8 = "^6.0.0.post1"
# docs

[tool.poetry.group.interactive.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.7"
ipython = "^8.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
line_length = 88
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra -q",
  "-v",
  "--showlocals",
  "--strict-markers",
  "--strict-config",
] # --cov-report xml --cov=tuify
testpaths = ["tests"]

[tool.flake8]
max-line-length = 88
max-doc-length = 88
max-complexity = 10
doctests = true
exclude = ['.git', '__pycache__', '.venv']
