[tool.poetry]

name = "KatzPlotkinPy"
version = "0.1.0"
description = "Unofficial companion to Low Speed Aerodynamics (2nd Ed)"
license = "MIT"
authors = ["alwinw <16846521+alwinw@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/alwinw/KatzPlotkinPy"
repository = "https://github.com/alwinw/KatzPlotkinPy"
documentation = "https://github.com/alwinw/KatzPlotkinPy"
packages = [{ include = "katzplotkinpy", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
numpy = [
  { version = "^1.24", python = "<3.9" },
  { version = "^2.0.2", python = ">=3.9,<3.10" },
  { version = "^2.1", python = ">=3.10" },
]

[tool.poetry.group.dev-tools.dependencies]
matplotlib = [
  { version = "^3.7.5", python = "<3.9" },
  { version = "^3.9.2", python = ">=3.9" },
]
mypy = "^1.12.0"
ruff = "^0.6.9"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
tox = "^4.21.2"

[tool.poetry.group.dev-interactive.dependencies]
ipython = [
  { version = "^8.12.3", python = "<3.9" },
  { version = "^8.18.0", python = ">=3.9,<3.10" },
  { version = "^8.27.0", python = ">=3.10" },
]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[tool.poetry.group.dev-tools]
optional = true

[tool.poetry.group.dev-interactive]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = false
changelog_incremental = true
use_shortcuts = true
version_files = ['src/katzplotkinpy/__version__.py']

[tool.pytest.ini_options]
addopts = [
  "-v",                        # Increase verbosity
  "-ra",                       # Extra test summary
  "--ff",                      # Run failed tests first
  "--showlocals",              # Locals in tracebacks
  "--strict-markers",          # Unknown markers raise errors
  "--strict-config",           # Unknown config options raise errors
  "--cov=tuify",               # Measure coverage of package
  "--cov-report=term-missing", # Show missing lines in terminal
  "--cov-fail-under=0",        # Fail if coverage is less than MIN
]
minversion = "8.0"
testpaths = ["tests"]
